@@ -8,11 +8,7 @@ GREP="grep"
 ROOT="/"
 MVN="mvn"
 
-MAVEN_OPTS="$MAVEN_OPTS -Xmx800m -XX:+HeapDumpOnOutOfMemoryError"
-if $JAVA_HOME/bin/java -fullversion 2>&1 | grep -q 'java full version "9' ; then
-  MAVEN_OPTS="$MAVEN_OPTS --add-modules java.xml.bind"
-fi
-export MAVEN_OPTS
+export MAVEN_OPTS=${MAVEN_OPTS:-"-Xmx800m -XX:+HeapDumpOnOutOfMemoryError"}
 
 #  Use the maximum available, or set MAX_FD != -1 to use that
 MAX_FD="maximum"
